scrollbars issue in specify service component

--- a/src/app/components/presentational/qm-select-service/qm-select-service.component.scss
+++ b/src/app/components/presentational/qm-select-service/qm-select-service.component.scss
@@ -35,7 +35,7 @@
     flex-direction: column;
     align-items: center;
     height: calc(100vh - 134px);
-    overflow: scroll;
+    overflow: auto;
 }
 
 .qm-service-list__container-ext {
